--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body>
+
+
     <div id="titlebox">
         <input type="text" id="title" placeholder="What's the debate?">
     </div>
-    <div id="answerbox">
-        <input type="number" id="howmany" placeholder="How many folks?">
-        <button onclick="enter()" id="continueBtn"> Continue</button>
+
+    <div id="peoplebox">
+        <input type="number" id="people" placeholder="How many folks?">
+        <!-- <button onclick="enter()" id="continueBtn"> Continue</button> -->
     </div>
-
-
-
-
-
-
-
-
-
-
+    <div id = "votebox">
+        <input type="text" id="choiceinput" placeholder="Write a choice here">
+        <button onclick="addChoice()"> Add a vote choice</button>
+    </div>
+    <div>
+        <button onclick="enter()" id="continueBtn" class="choices"> Continue</button>
+    </div>
 
 
     <script src='script.js'></script>
