fixing weird stuff

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <div id="peoplebox">
         <input type="number" id="people" placeholder="How many folks?">
-        <!-- <button onclick="enter()" id="continueBtn"> Continue</button> -->
     </div>
     <div id = "votebox">
-        <input type="text" id="choiceinput" placeholder="Write a choice here">
+    </div>
+    <div id="addchoicebox">
         <button onclick="addChoice()"> Add a vote choice</button>
     </div>
     <div>
