--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     <div id="peoplebox">
         <input type="number" id="people" placeholder="How many folks?">
     </div>
+    <div id = "inputbox">
+    </div>
     <div id = "votebox">
     </div>
+
     <div id="addchoicebox">
         <button onclick="addChoice()"> Add a vote choice</button>
     </div>
