finding the winning option works

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <h1>
             Vote on it!
         </h1>
+        <h2>
+            Can't decide where to go out tonight with crew?<br>
+            Which concert to meet up at?
+        </h2>
+        <h3>
+            Anonymously
+        </h3>
     </div>
 
     <div id="titlebox">
