finding the winning option works

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
             Which concert to meet up at?
         </h2>
         <h3>
-            Anonymously
+            Anonymously.
         </h3>
+        <h4>
+            So no hard feelings when you loose.
+        </h4>
     </div>
 
     <div id="titlebox">
