--- a/index.html
+++ b/index.html
@@ -8,44 +8,40 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body>
-    <div>
-        <h1>
-            Vote on it!
-        </h1>
-        <h2>
-            Can't decide where to go out tonight with crew?<br>
-            Which concert to meet up at?
-        </h2>
-        <h3>
-            Anonymously.
-        </h3>
-        <h4>
-            So no hard feelings when you loose.
-        </h4>
-    </div>
+    <div id="app">
+        <div id="header">
+            <h1>Vote on it!</h1>
+            <h2>
+                Can't decide where to go out tonight with the crew?<br>
+                Which concert to meet up at?
+            </h2>
+            <h3>Anonymously.</h3>
+            <h4>So no hard feelings when you loose.</h4>
+        </div>
+        <div id="inputstuff">
+            <div id="titlebox">
+                <input type="text" id="title" placeholder="What's the debate?">
+            </div>
 
-    <div id="titlebox">
-        <input type="text" id="title" placeholder="What's the debate?">
-    </div>
-
-    <div id="peoplebox">
-        <input type="number" id="people" placeholder="How many folks?">
-    </div>
-    <div id = "votesleft">
-     </div>
-    <div id = "inputbox">
-    </div>
-    <div id = "votebox">
-    </div>
-
-    <div id="addchoicebox">
-        <button onclick="addChoice()"> Add a vote choice</button> <br>
-        <p>
-            Add as many as y'all need then press continue.
-        </p> 
-    </div>
-    <div>
-        <button onclick="enter()" id="continueBtn"> Continue</button>
+            <div id="peoplebox">
+                <input type="number" id="people" placeholder="How many folks?">
+            </div>
+            <div id = "votesleft">
+            </div>
+            <div id = "inputbox">
+            </div>
+            <div id = "votebox">
+            </div>
+            <div id="addchoicebox">
+                <button onclick="addChoice()"> Add a vote choice</button> <br>
+                <p>
+                    Add as many options as you need then press continue.
+                </p> 
+            </div>
+        </div>
+        <div>
+            <button onclick="enter()" id="continueBtn"> Continue</button>
+        </div>
     </div>
 
 
