--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Vote About It!</title>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body>
     <div id="app">
         <div id="header">
-            <h1>Vote on it!</h1>
             <h2>
                 Can't decide where to go out tonight with the crew?<br>
                 Which concert to meet up at?
             </h2>
+            <h1>Vote on it!</h1>
             <h3>Anonymously.</h3>
-            <h4>So no hard feelings when you loose.</h4>
+            <h4>So no hard feelings when you're option isn't chosen. Go with the flow, man!</h4>
         </div>
         <div id="inputstuff">
             <div id="titlebox">
@@ -39,7 +39,7 @@
                 </p> 
             </div>
         </div>
-        <div>
+        <div id="continuebox">
             <button onclick="enter()" id="continueBtn"> Continue</button>
         </div>
     </div>
