broke the see rusults button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="addchoicebox">
                 <button onclick="addChoice()"> Add a vote choice</button> <br>
                 <p>
-                    Add as many options as you need then press continue.
+                    Up to 4 options then press continue.
                 </p> 
             </div>
         </div>
