--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="header">
             <h2>
                 Can't decide where to go out tonight with the crew?<br>
-                Which concert to meet up at?
+                Which concert to see?
             </h2>
             <h1>Vote on it!</h1>
             <h3>Anonymously.</h3>
@@ -33,7 +33,7 @@
             <div id = "votebox">
             </div>
             <div id="addchoicebox">
-                <button onclick="addChoice()"> Add a vote choice</button> <br>
+                <button onclick="addChoice()"> Add a vote option (4 max)</button> <br>
                 <p>
                     Up to 4 options then press continue.
                 </p> 
