--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id = "votebox">
             </div>
             <div id="addchoicebox">
-                <button onclick="addChoice()"> Add a vote option (4 max)</button> <br>
+                <button onclick="addChoice()"> Add a vote option (5 max plz)</button> <br>
                 <p>
                     Up to 4 options then press continue.
                 </p> 
