--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </h2>
             <h1>Vote on it!</h1>
             <h3>Anonymously.</h3>
-            <h4>So no hard feelings when you're option isn't chosen. Go with the flow, man!</h4>
+            <h4>So no hard feelings when your option isn't chosen. Go with the flow, man!</h4>
         </div>
         <div id="inputstuff">
             <div id="titlebox">
